pypi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pypi
spec:
  type: ClusterIP
  selector:
    name: pypi
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
