pypi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pypi
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pypi.example.com
  rules:
    - host: pypi.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pypi
                port:
                  number: 80
